--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1020,6 +1020,9 @@ select {
 .z-40 {
   z-index: 40;
 }
+.z-\[100\] {
+  z-index: 100;
+}
 .col-span-6 {
   grid-column: span 6 / span 6;
 }
@@ -1163,6 +1166,9 @@ select {
 .block {
   display: block;
 }
+.inline-block {
+  display: inline-block;
+}
 .inline {
   display: inline;
 }
@@ -1220,9 +1226,6 @@ select {
 .min-h-screen {
   min-height: 100vh;
 }
-.min-h-full {
-  min-height: 100%;
-}
 .w-5 {
   width: 1.25rem;
 }
@@ -1270,6 +1273,9 @@ select {
 }
 .w-32 {
   width: 8rem;
+}
+.w-1\/5 {
+  width: 20%;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1359,6 +1365,9 @@ select {
 .resize-none {
   resize: none;
 }
+.resize {
+  resize: both;
+}
 .list-inside {
   list-style-position: inside;
 }
@@ -1378,6 +1387,9 @@ select {
 }
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 .flex-row {
   flex-direction: row;
@@ -1449,6 +1461,9 @@ select {
 }
 .overflow-y-hidden {
   overflow-y: hidden;
+}
+.overflow-y-scroll {
+  overflow-y: scroll;
 }
 .truncate {
   overflow: hidden;
@@ -1776,6 +1791,9 @@ select {
 .text-right {
   text-align: right;
 }
+.align-middle {
+  vertical-align: middle;
+}
 .font-sans {
   font-family: Nunito, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
@@ -2048,8 +2066,26 @@ select {
 /*hide scrollbar*/
 body::-webkit-scrollbar { width: 0 !important }
 html {
+    /*
     scroll-behavior: smooth;
+    */
 }
+/* custom scrollbar */
+::-webkit-scrollbar {
+    width:10px;
+  }
+::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 2px solid transparent;
+    background-clip: content-box;
+  }
+::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+  }
 blockquote {
     border-left: 4px solid #ccc;
     margin-bottom: 5px;
@@ -2121,6 +2157,10 @@ blockquote {
 .hover\:bg-blue-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(219 234 254 / var(--tw-bg-opacity));
+}
+.hover\:bg-indigo-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
 }
 .hover\:bg-opacity-100:hover {
   --tw-bg-opacity: 1;
@@ -2310,6 +2350,10 @@ blockquote {
 .dark .dark\:bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+.dark .dark\:bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 .dark .dark\:bg-indigo-500 {
   --tw-bg-opacity: 1;
@@ -2588,24 +2632,24 @@ blockquote {
     text-align: right;
   }
 
-  .sm\:text-slate-500 {
-    --tw-text-opacity: 1;
-    color: rgb(100 116 139 / var(--tw-text-opacity));
-  }
-
   .sm\:text-slate-900 {
     --tw-text-opacity: 1;
     color: rgb(15 23 42 / var(--tw-text-opacity));
   }
 
-  .dark .dark\:sm\:text-slate-400 {
+  .sm\:text-slate-500 {
     --tw-text-opacity: 1;
-    color: rgb(148 163 184 / var(--tw-text-opacity));
+    color: rgb(100 116 139 / var(--tw-text-opacity));
   }
 
   .dark .dark\:sm\:text-white {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+
+  .dark .dark\:sm\:text-slate-400 {
+    --tw-text-opacity: 1;
+    color: rgb(148 163 184 / var(--tw-text-opacity));
   }
 }
 @media (min-width: 768px) {
@@ -2739,10 +2783,6 @@ blockquote {
 
   .lg\:gap-6 {
     gap: 1.5rem;
-  }
-
-  .lg\:gap-8 {
-    gap: 2rem;
   }
 
   .lg\:px-8 {
