--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,8 +7,29 @@ body::-webkit-scrollbar { width: 0 !important }
 
 
 html {
+    /*
     scroll-behavior: smooth;
+    */
 }
+/* custom scrollbar */
+::-webkit-scrollbar {
+    width:10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 2px solid transparent;
+    background-clip: content-box;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+  }
 blockquote {
     border-left: 4px solid #ccc;
     margin-bottom: 5px;
