--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2765,6 +2765,10 @@ blockquote {
     margin-top: 1.5rem;
   }
 
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
