--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1049,10 +1049,6 @@ select {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
 }
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
@@ -1214,9 +1210,6 @@ select {
 .h-60 {
   height: 15rem;
 }
-.h-48 {
-  height: 12rem;
-}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -1330,22 +1323,6 @@ select {
 }
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-@-webkit-keyframes spin {
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-@keyframes spin {
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-.animate-spin {
-  -webkit-animation: spin 1s linear infinite;
-          animation: spin 1s linear infinite;
 }
 .cursor-default {
   cursor: default;
@@ -1648,9 +1625,6 @@ select {
 }
 .fill-current {
   fill: currentColor;
-}
-.fill-blue-600 {
-  fill: #2563eb;
 }
 .object-cover {
   -o-object-fit: cover;
@@ -2110,6 +2084,11 @@ blockquote {
     right: 30px;
     z-index: 99;
 }
+textarea:focus,
+.vue-treeselect--multi .vue-treeselect__input:focus {
+    border: 0;
+    box-shadow: none;
+}
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -2374,10 +2353,6 @@ blockquote {
 .dark .dark\:text-slate-400 {
   --tw-text-opacity: 1;
   color: rgb(148 163 184 / var(--tw-text-opacity));
-}
-.dark .dark\:text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 @media (min-width: 640px) {
 
@@ -2777,6 +2752,10 @@ blockquote {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .lg\:gap-6 {
     gap: 1.5rem;
   }
@@ -2786,6 +2765,5 @@ blockquote {
     padding-right: 2rem;
   }
 }
-
 
 /*# sourceMappingURL=app.css.map*/
