--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -66,3 +66,9 @@ blockquote {
     right: 30px;
     z-index: 99;
 }
+
+textarea:focus,
+.vue-treeselect--multi .vue-treeselect__input:focus {
+    border: 0;
+    box-shadow: none;
+}
